# weather-monitor-NL

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dutch Weather Dashboard.html  README.md  TODO.md  eslint.config.mjs  package-lock.json  package.json  prisma.config.ts  pyproject.toml  requirements.txt  tsconfig.json  vercel.json  vitest.config.ts
.agents/: doc-updater.toml  test-plan-writer.toml
.github/: git_notes_template.md  pull_request_template.md
Onboarding/: PLAN.md
app/: globals.css  layout.tsx  page.tsx
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260503_0001_create_foundation_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: __init__.py  routes_dashboard.py  routes_health.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: __init__.py  base.py  models.py  session.py
apps/api/app/ingestion/: __init__.py
apps/api/app/jobs/: __init__.py  seed_dev.py
apps/api/app/schemas/: dashboard.py  health.py
apps/api/app/services/: dashboard_seed.py
apps/api/app/tests/: support.py  test_dashboard_fixture.py  test_dashboard_routes.py  test_health.py  test_migrations.py  test_seed_dev.py
docs/: agent-harness.md  architecture.md  changelog.md  commands.md  database.md  index.md  insights.md  patterns.md  testing.md
lib/: dashboard-regeneration.ts  dashboard.ts  forecast.ts  supported-cities.ts
prisma/: schema.prisma  seed.ts
scripts/: ingest.ts  postbuild.ts
tests/: dashboard-regeneration.test.ts  dashboard.test.ts  forecast.test.ts  (+8 more)
(+159 files in other folders)
