[project]
name = "dutch-weather-intelligence"
version = "0.1.0"
description = "Dutch Weather Intelligence"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "pydantic-settings>=2.7",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pre-commit>=4.4.0",
  "pytest>=8.3",
  "ruff>=0.15.11",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
