[project]
name = "dutch-weather-api"
version = "0.1.0"
description = "FastAPI scaffold for Dutch Weather Intelligence"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16",
  "fastapi[standard]>=0.115",
  "pydantic-settings>=2.7",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.15.11",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["app/tests"]
